fix transition on ios

--- a/src/css/transition.styl
+++ b/src/css/transition.styl
@@ -4,6 +4,9 @@
 #background-image
   will-change transform
 
+#markers
+  will-change opacity
+
 .tour-player.transition-zoomin-start
     #renderer
         opacity 0
